# subsonic-udon

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.codex/skills/unity-editor-bridge/: SKILL.md
.codex/skills/unity-editor-bridge/scripts/: unity-bridge-create-udonsharp.sh  unity-bridge-csharp-job.sh  unity-bridge-csharp-run.sh  unity-bridge-csharp-submit.sh  unity-bridge-curl.sh  unity-bridge-did-it-work.sh  unity-bridge-health.sh  unity-bridge-logs-since.sh
Assets/Editor/: SubsonicUdonAgentBridge.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
server/: pyproject.toml
server/src/subsonic_proxy/: app.py  cache.py  config.py  metadata.py  subsonic.py  transcoder.py
server/tests/: conftest.py  test_api.py  test_integration.py  test_subsonic.py  test_transcoder.py
